smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/errors-before-input.smithy
// Parse error at line 7, column 5 near `input`: Expected: '}', but found 'i' | Model
$version: "2.0"
namespace smithy.example

operation GetFoo {
    errors: []
    input: GetFooInput
}
